<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>machine_fleet_client_ros2</name>
  <version>0.0.1</version>
  <description>TODO</description>
  <maintainer email="nguyentannhat2298@gmail.com">tannhat</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>machine_fleet_msgs</depend>
  <depend>machine_fleet</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
